Fix greedy register allocation inserting moves after branches (bug 674507, r=adrake).